--- a/template/face.ui
+++ b/template/face.ui
@@ -94,6 +94,12 @@
       <height>50</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <family>Algerian</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
     <property name="text">
      <string/>
     </property>
