--- a/template/editor.ui
+++ b/template/editor.ui
@@ -115,6 +115,12 @@
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
+     <property name="font">
+      <font>
+       <family>隶书</family>
+       <pointsize>18</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string/>
      </property>
