--- a/template/cgviewer.ui
+++ b/template/cgviewer.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>CGViewer</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="sizePolicy">
